--- a/app/views/menu_lists/show.html.erb
+++ b/app/views/menu_lists/show.html.erb
@@ -1,9 +1,10 @@
 <!-- edit_family_list_button -->
 <div class="container">
   <div class="text-right row">
-    <button type="button" class="edit_family_list_button offset-5 col-6 offset-md-10 col-md-2" data-toggle="modal" data-target="#edit_family_list_modal">
+    <button type="button" class="edit_family_list_button offset-5 col-6 offset-md-10 col-md-2 tool2" data-toggle="modal" data-target="#edit_family_list_modal">
       Edit_family_list
     </button>
+    <span class="comment edit_family_list_comment">登録している家族の管理ができます</span>
   </div>
 </div>
 
