アナリティクス入れてみた（テスト）

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Anton rel="stylesheet">
     <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="http://mplus-fonts.sourceforge.jp/webfonts/general-j/mplus_webfonts.css">
+    <%= analytics_init if Rails.env.production? %>
   </head>
 
   <body class='<%= controller.controller_name %>'>
@@ -45,7 +46,7 @@
     position:"absolute",
     display:"none"
   })
-  
+
 // hedderの説明
   $(".tool").mouseover(function(){
     $(this).next("span.comment").fadeIn().css({
