--- a/app/views/menu_lists/show.html.erb
+++ b/app/views/menu_lists/show.html.erb
@@ -17,7 +17,7 @@
     <%= render "menu_list_show", menu_lists: @menu_lists, families:@families %>
 </div>
 <!-- ページネーション -->
-<div class="paginate mt-4">
+<div class="paginate mt-4 offset-1 col-10 offset-md-5 col-md-4">
   <%= paginate @menu_lists, theme: 'twitter-bootstrap-4' %>
 </div>
 <!-- add_menuのフォーム -->
