--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -220,8 +220,8 @@ header a{
     background-color: #00a41a;/*背景色*/
     color: #fff;/*文字色*/
     display: inline-block;
-    text-shadow: 1px 1px 0px rgb(0, 0, 0, 0.3);
-    box-shadow: 0 3px 0 rgb(0, 0, 0, 0.3);
+    text-shadow: 1px 1px 0px rgb(0, 0.3);
+    box-shadow: 0 3px 0 rgb(0, 0.3);
 }
 .button-simple:before {
     font-family: FontAwesome;
@@ -232,33 +232,33 @@ header a{
 a:hover .button-simple {
     background-color: #cc0000;/*触れたときの背景色*/
     color: #fff;/*触れたときの文字色*/
-    box-shadow: 0 0px 0 rgb(0, 0, 0, 0.3);
+    box-shadow: 0 0px 0 rgb(0, 0.3);
     animation-play-state: paused;
     top: 3px;
 }
 .pekopeko {
     animation: pekopeko 2s infinite;
-    box-shadow: 0 3px 0 rgb(0, 0, 0, 0.3);
+    box-shadow: 0 3px 0 rgb(0, 0.3);
 }
 @keyframes pekopeko {
     0% {
-        box-shadow: 0 3px 0 rgb(0, 0, 0, 0.3);
+        box-shadow: 0 3px 0 rgb(0, 0.3);
         top: 0px;
     }
     10% {
-        box-shadow: 0 0 0 rgb(0, 0, 0, 0.3);
+        box-shadow: 0 0 0 rgb(0, 0.3);
         top: 3px;
     }
     20% {
-        box-shadow: 0 3px 0 rgb(0, 0, 0, 0.3);
+        box-shadow: 0 3px 0 rgb(0, 0.3);
         top: 0px;
     }
     30% {
-        box-shadow: 0 0 0 rgb(0, 0, 0, 0.3);
+        box-shadow: 0 0 0 rgb(0, 0, 0.3);
         top: 3px;
     }
     40% {
-        box-shadow: 0 3px 0 rgb(0, 0, 0, 0.3);
+        box-shadow: 0 3px 0 rgb(0, 0, 0.3);
         top: 0px;
     }
 }
