herokuにアップができない問題修正（rgbの引数を減らしてみた）

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -232,7 +232,7 @@ header a{
 a:hover .button-simple {
     background-color: #cc0000;/*触れたときの背景色*/
     color: #fff;/*触れたときの文字色*/
-    box-shadow: 0 0px 0 rgb(0, 0, 0.3);
+    box-shadow: 0 0px 0 rgba(0, 0.3);
     animation-play-state: paused;
     top: 3px;
 }
