--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,9 +50,9 @@
       <p><%= link_to '戻る', 'javascript:history.back()' %></p>
     <% end %>
   </body>
-  <!-- <footer>
-    <a href="https://policies.google.com/technologies/ads?hl=ja">こちら</a>
-  </footer> -->
+  <footer>
+    <%= link_to "プライバシーポリシー",other_index_path %>
+  </footer>
 </html>
 
 <!-- // ツールチップ -->
