--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -236,7 +236,49 @@ header a{
     animation-play-state: paused;
     top: 3px;
 }
-
+.pekopeko {
+    animation: pekopeko 2s infinite;
+    box-shadow: 0 3px 0 rgb(0, 0.3);
+}
+@keyframes pekopeko {
+    0% {
+        box-shadow: 0 3px 0 rgb(0, 0.3);
+        top: 0px;
+    }
+    10% {
+        box-shadow: 0 0 0 rgb(0, 0.3);
+        top: 3px;
+    }
+    20% {
+        box-shadow: 0 3px 0 rgb(0, 0.3);
+        top: 0px;
+    }
+    30% {
+        box-shadow: 0 0 0 rgb(0, 0, 0.3);
+        top: 3px;
+    }
+    40% {
+        box-shadow: 0 3px 0 rgb(0, 0, 0.3);
+        top: 0px;
+    }
+}
+.mocchiri {
+    animation: mocchiri 3s infinite;
+}
+@keyframes mocchiri {
+    0% {
+        transform: scale(1, 0.8);
+    }
+    20% {
+        transform: scale(0.8, 1.1);
+    }
+    95% {
+        transform: scale(1, 1);
+    }
+    100% {
+        transform: scale(1, 0.8);
+    }
+}
 /* サインアップ画面 */
 @media screen and (max-width: 460px){
   .new_registrations_image {display:none}
