herokuにアップできない問題修正（コメントアウト）

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -210,29 +210,29 @@ header a{
   margin: 0 calc(50% - 50vw);
 }
 /* 「これから始める」ボタン */
-.button_simple {
+/* .button_simple {
     position: relative;
     font-weight: bold;
     padding: 5px 15px;
     margin: 0px 5px;
-    border-radius: 30px;/*角の丸み*/
-    font-size: 18px;/*文字サイズ*/
-    background-color: #00a41a;/*背景色*/
-    color: #fff;/*文字色*/
+    border-radius: 30px;
+    font-size: 18px;
+    background-color: #00a41a;
+    color: #fff;
     display: inline-block;
     text-shadow: 1px 1px 0px rgb(0, 0.3);
     box-shadow: 0 3px 0 rgb(0, 0.3);
 }
 .button_simple:before {
     font-family: FontAwesome;
-    content: '▷';/*好きなアイコン*/
-    color: #eeee22;/*アイコンの色*/
+    content: '▷';
+    color: #eeee22;
     margin-right: 3px;
 }
 .button_simple:hover {
     background-color: #cc0000;
     color: #fff;
-    box-shadow: 0 0px 0 rgba(0, 0.3);
+    box-shadow: 0 0px 0 rgb(0, 0.3);
     animation-play-state: paused;
     top: 3px;
 }
@@ -278,7 +278,8 @@ header a{
     100% {
         transform: scale(1, 0.8);
     }
-}
+} */
+
 /* サインアップ画面 */
 @media screen and (max-width: 460px){
   .new_registrations_image {display:none}
