--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -220,9 +220,8 @@ header a{
   background-color: #00a41a;
   color: #fff;
   display: inline-block;
-  text-shadow: 1px 1px 0px rgb(0, 0.3);
-  box-shadow: 0 3px 0 rgb(0, 0.3);
-
+  text-shadow: 1px 1px 0px #010000;
+  /* box-shadow: 0 3px 0 rgb(0, 0.3); */
 }
 /* .button_simple {
     position: relative;
