--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,8 +50,10 @@
       <p><%= link_to '戻る', 'javascript:history.back()' %></p>
     <% end %>
   </body>
-  <footer>
-    <%= link_to "プライバシーポリシー",other_index_path %>
+  <footer class="footer">
+    <div class="text-center pt-4">
+      <%= link_to "プライバシーポリシー",other_index_path %>
+    </div>
   </footer>
 </html>
 
