--- a/app/views/menu_lists/index.html.erb
+++ b/app/views/menu_lists/index.html.erb
@@ -4,7 +4,7 @@
 
 <!--表示されるメニュー -->
 <% if @menu_lists.present? %>
-  <div class="container">
+  <div class="container main">
     <div id="vue_main" class="row">
       <div v-show="show" class="offset-md-4 col-md-4">
         <div class="randam_menu">
