--- a/app/views/menu_lists/all_menu.html.erb
+++ b/app/views/menu_lists/all_menu.html.erb
@@ -1,4 +1,4 @@
-<%= @all_menu.each_with_index do | all_menu | %>
+<% @all_menu.each_with_index do | all_menu | %>
   <%= all_menu.menu_name %>
   <p>a</p>
 <% end %>
